# MythosEngine

./: .cta.json  .gitignore  README.md  biome.json  docker-compose-db.yml  docker-compose.dev.yml  docker-compose.yml  index.html  package-lock.json  package.json
.cursor/rules/: project-overview.mdc
backend/: .env.example  Dockerfile  MODEL_ARCHITECTURE.md  USAGE_EXAMPLES.md  alembic.ini  init_db.py  pyproject.toml  requirements.txt
backend/.cursor/rules/: backend-rules.mdc
backend/alembic/: env.py
backend/alembic/versions/: add_users_and_visibility.py  d42a4bc96954_.py
backend/app/: main.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: articles.py  images.py  projects.py  users.py
backend/app/core/: config.py
backend/app/db/: database.py
backend/app/db/models/: __init__.py  article.py  image.py  person.py  project.py  settlement.py  user.py
backend/app/domain/models/: __init__.py  article.py  person.py  project.py  settlement.py  user.py
backend/app/models/: __init__.py  article.py  project.py
backend/app/repositories/: __init__.py  article_repository.py  base_repository.py  image_repository.py  person_repository.py  project_repository.py  settlement_repository.py  user_repository.py
backend/app/schemas/: __init__.py  article.py  image.py  person.py  project.py  settlement.py  user.py
backend/app/services/: article_service.py  container.py  image_service.py  person_service.py  project_service.py  settlement_service.py  user_service.py
frontend/: Dockerfile  biome.json  package-lock.json  package.json
(+55 files in other folders)
