[project]
name = "mythosengine-backend"
version = "0.1.0"
description = "MythosEngine FastAPI backend"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "MythosEngine Contributors" }]

# Core dependencies (mirrored from requirements.txt)
dependencies = [
	"fastapi==0.115.6",
	"uvicorn[standard]==0.32.1",
	"sqlalchemy==2.0.36",
	"psycopg2-binary==2.9.10",
	"alembic==1.16.0",
	"pydantic==2.10.4",
	"pydantic-settings==2.7.0",
	"python-multipart==0.0.19",
	"python-jose[cryptography]==3.3.0",
	"passlib[bcrypt]==1.7.4",
	"python-dotenv==1.0.1",
	"httpx==0.28.1",
	"Pillow==10.4.0",
]

[project.optional-dependencies]
# Dev/test-only
 dev = [
	"pytest==8.3.4",
	"pytest-asyncio==0.25.0",
]

[tool.uv]
# uv-specific settings can go here (e.g., index URL mirrors)

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.alembic]
# placeholder for alembic config if needed later
